# Code-Coroner

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  PLAN.md  README.md  docker-compose.yml  look_this.md  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  sandbox.Dockerfile
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  llm.py
backend/app/api/: routes.py
backend/app/core/: __init__.py  config.py  logging.py  scoring_rules.py
backend/app/db/: models.py  session.py
backend/app/graph/: state.py  workflow.py
backend/app/graph/nodes/: __init__.py  analyze_project_structure.py  analyze_readme.py  calculate_scores.py  clone_repository.py  collect_repository_metadata.py  common.py  extract_claims.py  generate_report.py  inspect_engineering_quality.py  sandbox_test.py  security_scan.py  validate_url.py  (+1 more)
backend/app/scanners/: __init__.py  claims.py  engineering.py  security.py  structure.py
backend/app/schemas/: __init__.py  audit.py
backend/app/scoring/: __init__.py  engine.py
backend/app/services/: audits.py  reporting.py  sandbox.py
backend/app/tools/: __init__.py  repository.py
backend/tests/: test_api.py  test_audits.py  test_claims.py  test_degradation.py  test_llm.py  test_nodes.py  test_reporting.py  test_repository.py  test_scoring.py  test_security.py  test_structure.py  test_url_validation.py
examples/: sample_report.json  sample_report.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts
(+6 files in other folders)
